# ChessBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  x11wrapper.cpp  x11wrapper.h
